@@ -14,6 +14,7 @@
     \item If \code{profile.id} not defined, first profile used on this account
     \item Added \code{rga.retry.attempts} (default value is \code{5L}) option to control number of the request retry attempts
     \item Added \code{rga.pagination} (default values is \code{TRUE}) option to switch the batch processing mode
+    \item Improved pagination requests. Now allowed any positive integer in the \code{max.results}
     \item Updated instructions for obtaining OAuth credentials
     \item Some inner code improvements
   }
